--- a/global/static/style/theme.css
+++ b/global/static/style/theme.css
@@ -111,7 +111,7 @@ oe_highlight {
 }
 
 .badge {
-   border: 1px solid #5EC269;
+   border: 1px solid #054157;
 }
 
 .o_calendar_container .o_calendar_sidebar_container .ui-datepicker table .ui-state-active {
