--- a/global/views/views.xml
+++ b/global/views/views.xml
@@ -51,6 +51,7 @@
             <field name="model">stock.picking</field>
             <field name="arch" type="xml">
                 <tree default_order='create_date desc'>
+
                     <field name="name"/>
                     <field name="location_id"/>
                     <field name="state"/>
@@ -95,6 +96,7 @@
               <field name="name">Albaranes PDA</field>
               <field name="res_model">stock.picking</field>
               <field name="view_mode">tree,form</field>
+              <field name="domain">[('code', '=', 'outgoing')]</field>
                  <field name="view_ids" eval="[(5, 0, 0),
                     (0, 0, {'view_mode': 'tree', 'view_id': ref('global.stock_picking_global_firma_tree')}),
                     (0, 0, {'view_mode': 'form', 'view_id': ref('global.stock_picking_global_firma_form')})]"
