--- a/global/views/stock_picking_views.xml
+++ b/global/views/stock_picking_views.xml
@@ -5,14 +5,22 @@
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
+                <!--<xpath expr="//field[@name='backorder_id']" position="after">
+                    <field name="correo_electronico"/>
+                </xpath>-->
+
+
                 <xpath expr="//notebook" position="inside">
-                <page name="firma" string="Firma recepción">
-                    <group name='firmas' string="">
-                        <field name="receptor" />
-                        <field name="firma_cliente" widget="signature"  />
-                    </group>
-                </page>
+                    <page name="firma" string="Firma recepción">
+                        <group name='firmas' string="">
+                            <field name="receptor" />
+                            <field name="firma_cliente" widget="signature"  />
+                        </group>
+                    </page>
                 </xpath>
         </field>
     </record>
 </odoo>
+
+
+
