--- a/credit_management/views/account_journal_view.xml
+++ b/credit_management/views/account_journal_view.xml
@@ -13,4 +13,27 @@
             </field>
         </field>
     </record>
+    <record id="view_account_move_inherit_tree" model="ir.ui.view">
+        <field name="name">account.move.inherit.tree</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_move_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='invoice_line_ids']/tree/field[@name='discount']" position="replace">
+                <field name="discount" string="Disc.%"/>
+            </xpath>
+        </field>
+    </record>
+    <record id="view_account_move_inherit_list" model="ir.ui.view">
+        <field name="name">account.move.inherit.list</field>
+        <field name="model">account.move</field>
+        <field name="inherit_id" ref="account.view_invoice_tree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//tree/field[@name='ref']" position="replace">
+                <field name="ref"/>
+            </xpath>
+            <xpath expr="//field[@name='invoice_payment_state']" position="replace">
+                <field name="invoice_payment_state"/>
+            </xpath>
+        </field>
+    </record>
 </odoo>
